--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "bootstrap": "~3.3.2",
     "bootstrap-webpack": "0.0.3",
     "gulp-util": "~3.0.3",
-    "gulp-sass": "~1.3.3"
+    "gulp-sass": "~1.3.3",
+    "babel-core": "~4.4.6",
+    "babel-loader": "~4.0.0",
+    "sass-loader": "~0.4.0-beta.1",
+    "style-loader": "~0.8.3",
+    "node-sass": "~2.0.1"
   }
 }
