--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "babel-loader": "~4.0.0",
     "sass-loader": "~0.4.0-beta.1",
     "style-loader": "~0.8.3",
-    "node-sass": "~2.0.1"
+    "node-sass": "~2.0.1",
+    "imagemin": "~3.1.0",
+    "image-webpack-loader": "~1.2.0",
+    "autoprefixer-loader": "~1.2.0",
+    "gsap": "~1.15.1"
   }
 }
