--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "imagemin": "~3.1.0",
     "image-webpack-loader": "~1.2.0",
     "autoprefixer-loader": "~1.2.0",
-    "gsap": "~1.15.1"
+    "gsap": "~1.15.1",
+    "jquery": "~2.1.3",
+    "underscore": "~1.8.2",
+    "lodash": "~3.6.0"
   }
 }
